# howto-weaviate-retrieval-plugin

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.env  devcontainer.json
.well-known/: ai-plugin.json  openapi.yaml
scripts/: deploy_flyio.sh  generate_openapi_spec.py
server/: database.py  embedding.py  main.py
tests/: conftest.py  docker-compose.yml
tests/server/: test_database.py  test_embedding.py  test_main.py
